--- a/MN-Portfolio/src/app/components/about-me/about-me.component.html
+++ b/MN-Portfolio/src/app/components/about-me/about-me.component.html
@@ -1,1 +1,16 @@
-<p>about-me works!</p>
+<div class="profile">
+    <section class="nameAndPhoto par">
+        <img id="profilePicture" src="../../../assets/yo.png" alt="foto de perfil">
+        <div class="nameProfile">
+            <h2 class="titleH2">Nazarena Grabriela Macre</h2>
+            <h3 id="title">Full Stack</h3>
+        </div>
+    </section>
+    <article class="descriptionProfile par">
+        <div class="lineDiv up"></div>
+        <h2 class="titleH2">Acerca de mí</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, reiciendis ea ex excepturi iste iure sunt sed.
+            Unde, dignissimos, odio id cum sapiente porro nostrum beatae explicabo, perspiciatis magnam corporis!</p>
+    </article>
+</div>
+<div class="lineDiv down"></div>
