--- a/MN-Portfolio/src/styles.css
+++ b/MN-Portfolio/src/styles.css
@@ -3,8 +3,21 @@
     padding: 0;
     box-sizing: border-box;
     background-color: #e6a6f5;
+    font-family: 'Comic Neue', cursive;
+font-family: 'IBM Plex Mono', monospace;
     
 }
 body{
     background-image: url('./assets/banner.jpg');
+}
+
+.lineDiv{
+    border-bottom: 2px solid #eccbf4;
+    width: 90%;
+}
+
+@media only screen and (width >=768px){
+    .lineDiv{
+        width: 93%;
+    }
 }
