--- a/MN-Portfolio/src/app/components/about-me/about-me.component.css
+++ b/MN-Portfolio/src/app/components/about-me/about-me.component.css
@@ -53,11 +53,9 @@
 .up{
     position: relative;
     top: -30px;
+    width: 100%;
 }
 
-.down{
-    bottom: 30px; 
-}
 
 @media only screen and (width >= 375px) {
     #profilePicture {
