--- a/MN-Portfolio/src/app/app.component.html
+++ b/MN-Portfolio/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div>
     <app-header></app-header>
     <app-about-me></app-about-me> 
+    <app-experience></app-experience>
+    <app-education></app-education>
+    <app-hard-soft-skill></app-hard-soft-skill>
+    <app-proyect></app-proyect>
+    <app-footer></app-footer>
 </div>
