--- a/MN-Portfolio/src/app/components/about-me/about-me.component.html
+++ b/MN-Portfolio/src/app/components/about-me/about-me.component.html
@@ -9,8 +9,7 @@
     <article class="descriptionProfile par">
         <div class="lineDiv up"></div>
         <h2 class="titleH2">Acerca de mí</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, reiciendis ea ex excepturi iste iure sunt sed.
-            Unde, dignissimos, odio id cum sapiente porro nostrum beatae explicabo, perspiciatis magnam corporis!</p>
+        <p>¡Hola! Soy Nazarena, una entusiasta del desarrollo Full Stack. Estoy lista para iniciar mi carrera en tecnología. Mi formación sólida se combina con mi pasión por la música, los viajes y la lectura. Busco oportunidades para aplicar mis habilidades y crecer como profesional en el desarrollo web.</p>
     </article>
     
 </div>
