--- a/MN-Portfolio/src/app/components/education/education.component.html
+++ b/MN-Portfolio/src/app/components/education/education.component.html
@@ -1,5 +1,22 @@
 <section class="education">
-    <h2 class="titleH2">Educación</h2>
-
+    <h2 class="titleH2 italic">Educación</h2>
+    <article class="item">
+        <ul>
+            <li><h3>Educación 1</h3><p class="grey italic">(YEAR)</p></li>
+        </ul> 
+        <p class="descriptionItem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in ipsa unde veniam tempore velit assumenda fugiat dolores, sint labore explicabo amet, hic nulla! Ea inventore magnam laborum nesciunt perspiciatis.</p>
+    </article>
+    <article class="item">
+        <ul>
+            <li><h3>Educación 2</h3><p class="grey italic">(YEAR)</p></li>
+        </ul> 
+        <p class="descriptionItem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in ipsa unde veniam tempore velit assumenda fugiat dolores, sint labore explicabo amet, hic nulla! Ea inventore magnam laborum nesciunt perspiciatis.</p>
+    </article>
+    <article class="item">
+        <ul>
+            <li><h3>Educación 3</h3><p class="grey italic">(YEAR)</p></li>
+        </ul> 
+        <p class="descriptionItem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in ipsa unde veniam tempore velit assumenda fugiat dolores, sint labore explicabo amet, hic nulla! Ea inventore magnam laborum nesciunt perspiciatis.</p>
+    </article>
 </section>
 <div class="lineDiv"></div>
