--- a/MN-Portfolio/src/app/components/hard-soft-skill/hard-soft-skill.component.html
+++ b/MN-Portfolio/src/app/components/hard-soft-skill/hard-soft-skill.component.html
@@ -1,5 +1,5 @@
 <section class="hardSoftSkill">
-    <h2 class="titleH2">Hard and Soft Skills</h2>
+    <h2 class="titleH2 italic">Hard and Soft Skills</h2>
 
 </section>
 <div class="lineDiv"></div>
