--- a/MN-Portfolio/src/app/components/proyect/proyect.component.html
+++ b/MN-Portfolio/src/app/components/proyect/proyect.component.html
@@ -1,5 +1,5 @@
 <section class="proyects">
-    <h2 class="titleH2">Proyectos</h2>
+    <h2 class="titleH2 italic">Proyectos</h2>
 
 </section>
 <div class="lineDiv"></div>
